Fix app bar squish and pagination colors.

--- a/src/styles/components/_app-bar.scss
+++ b/src/styles/components/_app-bar.scss
@@ -7,6 +7,7 @@
   background-color: rgba($WHITE, .96);
   color: $GREY_700;
   display: flex;
+  font-size: 0.875rem;
   height: var(--app-bar-height);
   padding: 0 24px;
 
@@ -24,7 +25,15 @@
 }
 
 .app-bar__item + .app-bar__item {
-  margin-left: 16px;
+  margin-left: 14px;
+}
+
+.app-bar__item:nth-of-type(2) {
+  display: none;
+
+  @include bp(sm) {
+    display: flex;
+  }
 }
 
 .app-bar__item:not(:last-of-type)::after {
@@ -34,7 +43,7 @@
   height: 10px;
   // sass-lint:disable quotes
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='10' viewBox='0 0 6 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.47334 9.47333L0.526672 8.52667L4.06001 5L0.526672 1.47333L1.47334 0.526667L5.94001 5L1.47334 9.47333Z' fill='%235F6368'/%3E%3C/svg%3E");
-  margin-left: 16px;
+  margin-left: 14px;
 }
 
 .app-bar__item > a {
@@ -45,7 +54,6 @@
 .app-bar__share {
   align-items: center;
   display: flex;
-  font-size: 14px;
   margin-left: auto;
   text-transform: uppercase;
   cursor: pointer;
